--- a/style.css
+++ b/style.css
@@ -125,19 +125,19 @@ body{
 
 /* setting modal */
 
-.setting-modal[open]{
-    position: fixed;
+.setting-modal{
+    padding: 0;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--text-light);
     width: 400px;
     height: 350px;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px; */
+    position: relative;
+    overflow: visible;
+    outline: 0;
+    border: 0;
+    border-radius: 10px;
 }
 
 .setting-modal .heading{
@@ -149,9 +149,21 @@ body{
     border-bottom: 1px solid black;
 }
 
+.heading i{
+    cursor: pointer;
+    padding: 5px;
+    font-size: 18px;
+    transition: 0.4s;
+}
+
+.heading i:hover{
+    transform: scale(1.3);
+}
+
 .setting-modal .times{
-    background-color: green;
+    /* background-color: green; */
     padding: 20px 10px;
+    border-bottom: 1px solid black;
 }
 
 .times h5{
@@ -163,6 +175,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* border-bottom: 1px solid black; */
 }
 
 .time-inputs div{
@@ -178,4 +191,33 @@ body{
 .time-inputs div input{
     font-size: 14px;
     width: 80px;
+    height: 30px;
+    outline: 0;
+    border: 0;
+    background-color: lightgray;
+    border-radius: 5px;
+    padding-left: 5px;
+}
+
+.setting-modal button{
+    z-index: 5;
+    position: absolute;
+    top: 320px;
+    left: 50%;
+    transform: translate(-50%);
+    padding: 10px 30px;
+    border: 1px solid var(--accent-color);
+    outline: 0;
+    border-radius: 30px;
+    background-color: var(--accent-color);
+    color: var(--text-light);
+    text-transform: capitalize;
+    font-size: 16px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.setting-modal button:hover{
+    background-color: var(--text-light);
+    color: var(--accent-color);
 }
