--- a/style.css
+++ b/style.css
@@ -48,8 +48,9 @@ body{
     border-radius: 50px;
 }
 
-.info-tabs div{
-    background-color: var(--accent-color);
+
+
+.info-tabs div{ 
     height: 100%;
     width: 120px;
     border-radius: 40px;
@@ -59,6 +60,10 @@ body{
     font-size: 14px;
     font-weight: 500;
     color: var(--text-light);
+}
+
+.active{
+    background-color: var(--accent-color);
 }
 
 .container .timer-container{
