--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
     color: var(--text-light);
 }
 
-.container .info-tabs{
+.container .buttons{
     background-color: var(--dark-background);
     width: 300px;
     height: 50px;
@@ -49,17 +49,22 @@ body{
 }
 
 
-
-.info-tabs div{ 
+.buttons button{ 
+    background: transparent;
+    border: 0;
+    outline: 0;
     height: 100%;
     width: 120px;
     border-radius: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 14px;
     font-weight: 500;
     color: var(--text-light);
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.buttons button:hover{
+    background-color: var(--accent-color);
 }
 
 .active{
