style: add outline to timer

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body{
     height: 350px;
     width: 350px;
     border: 10px solid var(--accent-color);
+    outline: var(--dark-background) solid 12px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
