refactor: update previous dom elem into button elem

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
     background-color: var(--accent-color);
 }
 
-.active{
+.buttons button.active{
     background-color: var(--accent-color);
 }
 
