--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ body{
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    background-color: black;
+    /* border: 2px solid black; */
     cursor: pointer;
 }
 
